[package]
name = "rs_bluesky"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }           # Serialization/Deserialization
serde_json = { version = "1.0", features = ["raw_value"] }   # JSON parsing
tokio = {version = "1.30.0", features = ["full"]}            # Asynchronous runtime for Rust
config = "0.13"                                              # To parse configuration .toml files
clap = { version = "4.3", features = ["derive"] }            # Cmd args parser
tokio-tungstenite = "0.24.0"                                   # Websocket handler
futures = "0.3"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.8"
regex = "1.11.1"
indicatif = "0.17"
tokio-stream = "0.1"
async-tungstenite = { version = "0.28.2", features = ["tokio-runtime", "tokio-native-tls"] }
time = "0.3"
tokio-native-tls = "0.3"
rustls = "0.20"
native-tls = "0.2"
argh = "0.1.1"
lazy_static = "1.1"
rcgen = { version = "0.13", features = ["pem"] }
webpki-roots = "0.26"
tokio-rustls = "0.26.1"
url = "2.5.4"
rustls-native-certs = "0.6.2"
tungstenite = "0.24.0"
csv = "1.3.0"
anyhow = "1.0.99"
ndarray = "0.16.1"
once_cell = "1.21.3"
ndarray-npy = "0.9.1"
rand = "0.8.5"
